apps/kube-system/cilium/apiserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.cilium/lb-ipam-ips: 192.168.77.77
  name: kubernetes-external
  namespace: kube-system
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerClass: io.cilium/bgp-control-plane
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - name: https
      port: 6443
      protocol: TCP
      targetPort: 6443
